@@ -2,9 +2,11 @@ Revision history for Perl extension Encode-JISX0213.
 
 0.03  Xxx Xxx XX 2013
 
-	* t/JISX0213.t: RT tests did always succeed.
-	* ShiftJIS2004.pm: Deprecate PERLQQ feature from econde(),
+	* t/JISX0213.t: RT tests had always succeeded.
+	* ShiftJIS2004.pm: Deprecated PERLQQ feature of econde(),
 	  and added multibyte-aware error handling to decode().
+	* ucm/jis-x-0213-annex1.ucm: added fallback mappings for alternative
+	  names (per Annex 5) of two ASCII characters.
 
 0.02  Mon Sep 23 2013
 
